# Embedded-written-reference

./: GithubReadme.md  README.md
7.30诺瓦科技/: linux内核裁剪的方式.md  tcp物理层的具体内容.md  关于时钟发生器的英文翻译.md  示波器采集数据的要求.md
8.1Dji大疆/: C关键词的描述.md  C函数使用注意.md  C变量存储区域.md  C有符号的变量和无符号的变量相加.md  C简述static关键字对于工程模块化的作用.md  C语言编译执行的四个阶段.md  Linux多任务进程线程之间的关系.md  Linux查询进程和线程数量.md  OScache多任务调度描述.md  OScache缓存一致性描述.md  OS中断处理过程的描述.md  OS处理器读取内存的过程 (copy).md  OS如何实现进程间的切换.md  OS实时和非实时性.md  OS嵌入式实时操作系统描述.md  OS嵌入式系统指定位反转.md  OS并发的同步机制.md  OS简述一个执行程序在运行时的内存布局.md  OS简述处理器中断处理的过程.md  OS简述线程之间的同步互斥, 需要描述其占用空间的大小.md  OS系统设计.md  cpu对锁的支持.md  linux内核中常用的两个宏定义.md  linux目录结构.md  linux系统打开设备文件处于的状态.md  大端小端存储问题.md  大端小端存储问题.md.md  简述C函数中参数传递问题.md
8.24HIK/: C中全局变量和局部变量可以重名.md  C宏使用.md  C宏求一个数组元素的个数.md  list相关操作.md
8.3网易/: Dijkstra最短路径算法的描述.md  LInux系统权限.md  TCP IP数据分包.md  echo 重定义 和 grep 正则表达式匹配.md  echo重定义和grep正则表达式匹配.md  二叉树节点和度.md
C/: C中常量的表示.md  C变量的生命周期.md  C实现一个数的四舍五入.md  C实现函数跳转到绝对地址0x100000处执行.md  C对于一个频繁使用的短小函数.md  C简述static关键字对于工程模块化的作用.md  C运算符的优先级.md  IGBT是什么控制性原件.md  PC寻址范围.md  Token划分.md  error的目的是什么.md  单片机应用程序架构.md  如何写C嵌入式的死循环.md  指针和引用的区别.md  用变量a给出下面的定义.md  看门狗程序的应用.md  访问固定的内存位置.md
OS/: ARM体系结构下的MMU如何实现映射.md  ARM通过几级页表实现存储空间映射.md  Bootloader.md  JTag用途.md  Linux中断之间区别.md  Linux中断分层的概念.md  Linux中的RCU.md  Linux内核启动流程.md  Linux内核和用户程序运行在物理地址还是虚拟地址.md  Linux内核的五个模块描述.md  Linux字符驱动和块驱动模型.md  Linux实现原子操作的方法有哪些.md  Oops.md  (+28 more)
code/: CMakeLists.txt  README.md  double_array_tran_pram.c  funcation_array.c  memory_visit.c  one_array_transmit_paramter.c  pointer_funcation.c  sizeof_value.c
(+25 files in other folders)
